--- a/room.html
+++ b/room.html
@@ -1,5 +1,33 @@
 <html><head><title>MINELINE</title>
-</head><body>
+    <link rel="stylesheet" type="text/css" href="room.css">
+    <script src="room.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
+</head>
+<body class="body_background">
+
+  <button id="log" onclick="logout()">Log out</button>
+
+    <center>
+    <h1></h1>
+
+    <br><br>
+    <div>
+    <input id="room_namer" clas="form-control" placeholder="Enter a room name for your Chat room">
+    
+    <button id="room_adder" onclick="add()" class="btn btn-danger">Add room</button></div>
+    <br><br>
+
+    <div id="rooms">
+      <h3></h3>
+    </div>
+    </center>
 </body>
 </html>
